<!--
  ~ /**
  ~  * Created by Eduard Fomin on 05.02.19 9:42
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 02.10.18 15:48
  ~  */
  -->

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_header_1c"
        app:key="erp">

        <EditTextPreference
            app:defaultValue="@string/pref_default_1c_path"
            app:key="erp_path"
            app:maxLines="1"
            app:singleLine="true"
            app:title="@string/pref_title_1c_path" />

        <EditTextPreference
            app:defaultValue="@string/pref_default_1c_user"
            app:key="erp_user"
            app:maxLines="1"
            app:singleLine="true"
            app:title="@string/pref_title_1c_user" />

        <EditTextPreference
            app:defaultValue="@string/pref_default_1c_password"
            app:key="erp_password"
            app:maxLines="1"
            app:singleLine="true"
            app:title="@string/pref_title_1c_password" />

    </PreferenceCategory>

</PreferenceScreen>
