<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:viewBindingIgnore="true"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/barcodeButton"
        app:layout_constraintEnd_toEndOf="@+id/barcodeButton"
        app:layout_constraintStart_toStartOf="@+id/barcodeButton"
        app:layout_constraintTop_toTopOf="@+id/barcodeButton" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/pushe_logo" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erp_name"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="true"
        android:text="@string/action_sign_out"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/barcodeButton"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageButton
        android:id="@+id/barcodeButton"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_barcode_color"
        android:contentDescription="@string/barcode_hint"
        app:layout_constraintBottom_toTopOf="@+id/barcodeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout" />

    <TextView
        android:id="@+id/barcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>