<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.SummaryFragment">
    
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/full_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/operation_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/operation_text"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/operation_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/date_text"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_name" />

    <TextView
        android:id="@+id/operation_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/operation_time_text"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_date" />

    <TextView
        android:id="@+id/operation_sum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/operation_sum_text"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_time" />

    <TextView
        android:id="@+id/result"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_bc_processing_result_ok"
        android:gravity="center"
        android:shadowColor="#858585"
        android:shadowRadius="3"
        android:text="@string/done_result_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_sum" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_sum" />

</androidx.constraintlayout.widget.ConstraintLayout>